package NYT.NJobProberClient.NProto;

import "yt/core/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqDumpInputContext
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspDumpInputContext
{
    repeated NYT.NProto.TGuid chunk_id = 1;
}

message TReqStrace
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspStrace
{
    required string trace = 1;
}

message TReqSignalJob
{
    required NYT.NProto.TGuid job_id = 1;
    required string signal_name = 2;
}

message TRspSignalJob
{ }

////////////////////////////////////////////////////////////////////////////////
